force-app/main/default/objects/Item__c/fields/Borrowed_Items__c.field-meta.xml
<CustomField>
    <fullName>Borrowed_Items__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Borrowed Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>