force-app/main/default/objects/Item__c/fields/Genre__c.field-meta.xml
<CustomField>
    <fullName>Genre__c</fullName>
    <label>Genre</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Crime</fullName>
            </value>
            <value>
                <fullName>Fantasy</fullName>
            </value>
            <value>
                <fullName>History</fullName>
            </value>
            <value>
                <fullName>Horror</fullName>
            </value>
            <value>
                <fullName>Humor</fullName>
            </value>
            <value>
                <fullName>Science fiction</fullName>
            </value>
            <value>
                <fullName>Thriller</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>