force-app/main/default/objects/Item__c/fields/Publisher__c.field-meta.xml
<CustomField>
    <fullName>Publisher__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Publisher</label>
    <referenceTo>Publisher__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>