force-app/main/default/objects/Item__c/validationRules/Date_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Check</fullName>
    <active>true</active>
    <errorConditionFormula>Release_Date__c &gt; Today()</errorConditionFormula>
    <errorDisplayField>Release_Date__c</errorDisplayField>
    <errorMessage>Release Date cannot be greater than today`s date</errorMessage>
</ValidationRule>