force-app/main/default/objects/Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Genre__c</columns>
    <columns>Publisher__c</columns>
    <columns>Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>